--- a/Firechat/en.lproj/iPhone.storyboard
+++ b/Firechat/en.lproj/iPhone.storyboard
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
+        <deployment defaultVersion="1536" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4rN-hE-adO"/>
+                        <viewControllerLayoutGuide type="bottom" id="U3P-ze-ga0"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5ER-WH-MeG" customClass="UITouchTableView">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5ER-WH-MeG" customClass="UITouchTableView">
+                                <rect key="frame" x="20" y="71" width="280" height="419"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="2" id="oZG-Bs-7hj"/>
@@ -20,6 +26,7 @@
                                 </connections>
                             </tableView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jDZ-g6-iFq">
+                                <rect key="frame" x="20" y="498" width="280" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -27,25 +34,25 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yCk-ST-3ke">
+                                <rect key="frame" x="20" y="20" width="280" height="44"/>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
                                 <state key="normal" title="Guest">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="5ER-WH-MeG" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="ARs-0P-bW7"/>
-                            <constraint firstItem="jDZ-g6-iFq" firstAttribute="top" secondItem="5ER-WH-MeG" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Cg0-9E-ONs"/>
-                            <constraint firstAttribute="bottom" secondItem="jDZ-g6-iFq" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="JIj-aC-Mtr"/>
-                            <constraint firstItem="jDZ-g6-iFq" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="SQD-7M-2hd"/>
-                            <constraint firstItem="5ER-WH-MeG" firstAttribute="top" secondItem="yCk-ST-3ke" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="SU3-2S-ghk"/>
-                            <constraint firstItem="yCk-ST-3ke" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="WWN-Nc-5Ou"/>
-                            <constraint firstItem="yCk-ST-3ke" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="aPk-mz-rbp"/>
-                            <constraint firstAttribute="trailing" secondItem="jDZ-g6-iFq" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="gsm-2p-Num"/>
-                            <constraint firstItem="5ER-WH-MeG" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="j10-hk-S0T"/>
-                            <constraint firstAttribute="trailing" secondItem="yCk-ST-3ke" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="tyq-pM-O8j"/>
+                            <constraint firstAttribute="trailing" secondItem="5ER-WH-MeG" secondAttribute="trailing" constant="20" symbolic="YES" id="ARs-0P-bW7"/>
+                            <constraint firstItem="jDZ-g6-iFq" firstAttribute="top" secondItem="5ER-WH-MeG" secondAttribute="bottom" constant="8" symbolic="YES" id="Cg0-9E-ONs"/>
+                            <constraint firstAttribute="bottom" secondItem="jDZ-g6-iFq" secondAttribute="bottom" constant="20" symbolic="YES" id="JIj-aC-Mtr"/>
+                            <constraint firstItem="jDZ-g6-iFq" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" id="SQD-7M-2hd"/>
+                            <constraint firstItem="5ER-WH-MeG" firstAttribute="top" secondItem="yCk-ST-3ke" secondAttribute="bottom" constant="8" symbolic="YES" id="SU3-2S-ghk"/>
+                            <constraint firstItem="yCk-ST-3ke" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" id="WWN-Nc-5Ou"/>
+                            <constraint firstItem="yCk-ST-3ke" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" id="aPk-mz-rbp"/>
+                            <constraint firstAttribute="trailing" secondItem="jDZ-g6-iFq" secondAttribute="trailing" constant="20" symbolic="YES" id="gsm-2p-Num"/>
+                            <constraint firstItem="5ER-WH-MeG" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" id="j10-hk-S0T"/>
+                            <constraint firstAttribute="trailing" secondItem="yCk-ST-3ke" secondAttribute="trailing" constant="20" symbolic="YES" id="tyq-pM-O8j"/>
                         </constraints>
                     </view>
                     <connections>
@@ -58,22 +65,6 @@
             </objects>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="UITouchTableView" superclassName="UITableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UITouchTableView.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="nameField" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="textField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
